# OtusTemplateMagic

./: CMakeLists.txt  Doxyfile  classes.html  globals.html  globals_vars.html  graph_legend.html  index.htm  index.html  inherit_graph_1.md5  menudata.js  print__ip_8cpp.html  print__ip_8cpp__incl.map  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  print__ip_8h_source.html  print_ip.cpp  print_ip.h  structis__container_3_01T_00_01void__t_3_01typename_01T_1_1iterator_01_4_01_4.html  structis__container_3_01T_00_01void__t_3_01typename_01T_1_1iterator_01_4_01_4__inherit__graph.md5  structis__string.html  structis__string_3_01std_1_1string_01_4.html  structis__string_3_01std_1_1string_01_4__coll__graph.md5  structis__string__inherit__graph.map  structis__string__inherit__graph.md5
.github/workflows/: cmake-single-platform.yml  release.yml
doc/html/: annotated.html  files.html  globals_func.html  globals_type.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherits.html  print__ip_8cpp__incl.md5  print__ip_8h.html  print__ip_8h__incl.map  print__ip_8h__incl.md5  structis__container.html  structis__container_3_01T_00_01void__t_3_01typename_01T_1_1iterator_01_4_01_4__inherit__graph.map  structis__container__coll__graph.map  structis__container__inherit__graph.md5  structis__string_3_01std_1_1string_01_4__coll__graph.map
doc/html/search/: all_0.js  all_2.js  classes_0.js  functions_1.js  searchdata.js
search/: all_1.js  all_3.js  all_4.js  files_0.js  functions_0.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
